# DocuNexus-Your-AI-PDF-Assistant

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: deploy.yaml
backend/: Dockerfile  pyproject.toml  requirements.txt  run_worker.sh
backend/app/: main.py
backend/app/agents/: rag.py
backend/app/api/v1/endpoints/: chat.py  documents.py  upload.py
backend/app/core/: celery_app.py  config.py  vector_store.py
backend/app/schemas/: document.py
backend/app/services/: ingestion.py
backend/app/workers/: tasks.py
data/qdrant_data/: raft_state.json
data/qdrant_data/collections/docunexus_local/0/: newest_clocks.json  replica_state.json
data/qdrant_data/collections/docunexus_local/0/segments/3c8c665f-5166-4e67-b717-25ac7cec47ec/: mutable_id_tracker.mappings  segment.json
data/qdrant_data/collections/docunexus_local/0/segments/4415ebd6-f7c5-4f74-9e28-e68be7f5ff0b/: mutable_id_tracker.mappings
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: ServerWaker.tsx  chat-interface.tsx  flashcard-viewer.tsx  pdf-viewer.tsx  reasoning-drawer.tsx  upload-zone.tsx
frontend/src/hooks/: useAgent.ts
k8s/: production.yaml
